--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,22 @@
   }
 }
 
+@layer components {
+  .form-checkbox {
+    @apply rounded border-gray-600 text-green-500 focus:ring-green-500 focus:ring-offset-gray-900;
+  }
+
+  select {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2334D399' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+    background-position: right 0.5rem center;
+    background-repeat: no-repeat;
+    background-size: 1.5em 1.5em;
+    padding-right: 2.5rem;
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
